# rust-ssr-webserver

./: Cargo.toml  Dockerfile  LICENSE  README.md  cert.pem  key.pem
src/: main.rs  routes_list.rs
static/: 0-de07571c.js  0-ea3da030.js  1-46d16d44.js  1-d47adfda.js  1.d47adfda.css  2-77cee414.js  2-8aa4a57a.js  2.77cee414.css  3-418dd498.js  3-a83843c4.js  3.418dd498.css  4-b2b3c1b0.js  4-beee529a.js  5-072e8be0.js  6-a3fe57e8.js  about.html  contact.html  home_page.html  index.html  loadable-stats.json  main~bfe0ed74.de07571c.css  main~bfe0ed74.ea3da030.css  routes.json  site.webmanifest
